safari fixes
added min-height to main-nav to fix Safari layout issue

--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -1,7 +1,9 @@
 #main-nav {
 	@include flexy(row);
-	//justify-content: flex-start;
+	
 	height: 4em;
+	//added for Safari
+	min-height: 4em;
 	width: 100%;
 	background-color: $primary-dark;
 	padding-top: 0.25em;
@@ -9,6 +11,8 @@
 	@include mq(medium) {
 		@include flexy(column);
 		height: auto;
+		//added for Safari
+		min-height: 100vh;
 		width: 4em;
 	}
 
@@ -20,8 +24,6 @@
 			margin: 0.25em auto; 
 		}
 	}	
-
-	
 }
 
 
